--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="U-GWwZOKUY-FqRJYQu4ealLEaLnFK4WTKgDI7SCbS3E"
+    />
     <title>
       配当フロー:
       あなたの不労所得パイプラインを構築し、未来の配当金をシミュレーション
@@ -131,7 +135,7 @@
       class="w-full bg-light py-2 text-center text-xs text-gray-500 border-b border-gray-200"
     >
       <!-- Ad Placeholder: Ideal for a top banner ad (e.g., 728x90) -->
-      <p>ここに広告が表示されます</p>
+      <!-- <p>ここに広告が表示されます</p> -->
     </div>
 
     <header class="bg-white shadow-sm py-4">
@@ -288,7 +292,7 @@
         class="w-full bg-light py-4 text-center text-xs text-gray-500 rounded-lg shadow-sm my-8"
       >
         <!-- Ad Placeholder: Good for a responsive display ad -->
-        <p>ここに広告が表示されます - コンテキスト広告</p>
+        <!-- <p>ここに広告が表示されます - コンテキスト広告</p> -->
       </div>
 
       <section class="card mt-8">
@@ -325,7 +329,7 @@
       class="w-full bg-light py-2 text-center text-xs text-gray-500 border-t border-gray-200 mt-8"
     >
       <!-- Ad Placeholder: Ideal for a bottom sticky ad or another banner -->
-      <p>ここに広告が表示されます</p>
+      <!-- <p>ここに広告が表示されます</p> -->
     </div>
 
     <footer class="bg-dark text-white py-6 mt-auto">
