--- a/index.html
+++ b/index.html
@@ -321,6 +321,23 @@
           今日から経済的自立への道を築き始めましょう。思っているよりも簡単です！
         </p>
       </section>
+
+      <!-- New Section: 不労所得の夢：配当フローで実現する -->
+      <section class="card mt-8">
+        <h3 class="text-2xl font-semibold mb-4 text-gradient">
+          不労所得の夢：配当フローで実現する
+        </h3>
+        <p class="text-gray-600 mb-4">
+          多くの方が、お金が自分のために働いてくれる生活を夢見ています。不労所得は、その夢を実現するための鍵です。配当金投資は、年々成長していく安定したキャッシュフローを築くためのユニークな機会を提供します。
+        </p>
+        <p class="text-gray-600 mb-4">
+          配当フローがあれば、単に夢見るだけでなく、積極的に計画を立てることができます。当社のシミュレーターは、少額でも定期的な投資と配当金の再投資が、どのようにして大きな収入源へと変わっていくかを示します。これは、経済的自由を視覚化するためのあなた自身のツールです。
+        </p>
+        <p class="text-gray-600">
+          配当金の可能性を発見しましょう。今日から不労所得への旅を始めませんか？
+          — 思っているよりも簡単です！
+        </p>
+      </section>
     </main>
 
     <!-- Bottom Ad Banner Placeholder -->
